--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,7 @@
     <string name="Age">อายุ</string>
     <string name="Stature">ส่วนสูง</string>
 
+    <string name="name_sur">อนันพงศ์</string>
+    <string name="school">..........</string>
+
 </resources>
